deploy/backup/ollama-service-snapshot.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"stm-ollama"},"name":"stm-ollama","namespace":"slack-thread-manager"},"spec":{"ports":[{"port":11434,"protocol":"TCP","targetPort":11434}],"selector":{"app":"stm-ollama"},"type":"ClusterIP"}}
  creationTimestamp: "2026-05-08T17:34:56Z"
  labels:
    app: stm-ollama
  name: stm-ollama
  namespace: slack-thread-manager
  resourceVersion: "36249096"
  uid: 1ff295f2-1a56-4cd8-8235-3bdeff70d6e7
spec:
  clusterIP: 172.30.69.79
  clusterIPs:
  - 172.30.69.79
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 11434
    protocol: TCP
    targetPort: 11434
  selector:
    app: stm-ollama
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
